--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 
-h5{
-    color: #9999FF;
-    font-size: 42px;
+#title{
+    color: white;
+    background-color: #9955FF;
+    font-size: 72px;
+    text-shadow: 2px 2px #000000;
+    font-weight: bold;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
 }
