--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@
     border-width: 2px;
     border-color: black;
 }
+
+.image{
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    margin-top: 5px;
+}
